# trianglemesh

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  precompiled.h  trianglemesh.h
src/detail/: trianglemesh.cpp  trianglemesh.inl
src/detail/triangle/: readme.txt  triangle.c  triangle.h  triangle_info.txt
src/test/: CMakeLists.txt  test.cpp
src/triangle/: CMakeLists.txt  triangle.h
src/trianglemesh/: CMakeLists.txt  trianglemesh.h
src/trianglemesh/detail/: trianglemesh.cpp  trianglemesh.inl
